--- a/quiz.css
+++ b/quiz.css
@@ -37,3 +37,47 @@ h1{
     text-align: center;
     text-decoration: line-through;
 }
+nav{
+    width: 50%;
+    height: 70px;
+    max-width: 300px;
+    display: flex;
+}
+nav > ul{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-inline-start: 0;
+    margin-block: 0;
+}
+nav > ul > li{
+    display: block;
+    padding: 7px;
+    margin: 0 0.4rem;
+    list-style: none;
+    font-weight: bold;
+    color: black;
+    background-color: #d4c0c0;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px rgba(4px, 3px, 7px, 0.2);
+     transition: ease-in-out 0.3s;
+}
+nav > ul > li > a{
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+    font-family: 'roboto', sans-serif;
+    transition: ease-in-out 0.3s;
+}
+nav > ul >li:hover{
+    color: gold;
+    background-color: #503737;
+    transform: rotate(9deg);
+}
+nav > ul > li > a:hover{
+    color: gold;
+    transform: rotate(9deg);
+}
