--- a/quiz.css
+++ b/quiz.css
@@ -81,3 +81,58 @@ nav > ul > li > a:hover{
     color: gold;
     transform: rotate(9deg);
 }
+main{
+    padding-top: 50px;
+}
+section{
+    width: 80%;
+    margin: 0 auto 10px auto;
+    max-width: 800px;
+    background-color: #e6c6c6;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgba(200, 250, 245, 1.2);
+}
+h2{
+    font-family: cursive;
+    font-style: italics;
+    text-decoration: underline;
+    font-size: 1.7em;
+    text-transform: uppercase;
+    padding-top: 10px;
+    margin-top: 0;
+    border-bottom: 3px solid #796d6d;
+}
+.info{
+    padding: 10px 0 0 15px;
+    font-size: 1.2em;
+    line-height: 1.6em;
+    margin-right: 15px;
+}
+input{
+    font-size: 1rem;
+    padding: 8px;
+    border: 2px solid #796d6d;
+    border-radius: 5px;
+}
+.info label, .info input{
+    display: inline-block;
+    margin-bottom: 2px;
+}
+.info input{
+    text-align: center;
+    width: 50%;
+}
+.info label{
+    width: 10%;
+    text-align: right;
+    min-width: 60px;
+    font-size: 18px;
+}
+.question-block{
+    margin-bottom: 20px;
+    display: block;
+    text-align: left;
+    width: 100%;
+    padding-top: 5px;
+}
