--- a/quiz.css
+++ b/quiz.css
@@ -136,3 +136,30 @@ input{
     width: 100%;
     padding-top: 5px;
 }
+button{
+    margin: 40px auto;
+    display: block;
+    width: 100%;
+    max-width: 300px;
+    color: rgb(20, 15, 15);
+    background-color: #d4c0c0;
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 10px;
+    border: 3px solid #af8888;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px rgba(120, 220, 100, 0.2);
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+}
+button:hover{
+    background-color: #503737;
+    color: gold;
+    transform: scale(1.15);
+}
+footer{
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: white;
+}
